force-app/main/default/objects/BLS_Average_Wage__c/BLS_Average_Wage__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom settings that store the BLS defaults for Avg wages</description>
    <label>BLS Average Wage</label>
</CustomObject>