force-app/main/default/objects/BLS_Average_Wage__c/fields/area_code__c.field-meta.xml
<CustomField>
    <fullName>area_code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>area code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>