force-app/main/default/objects/BLS_Average_Wage__c/fields/owner_code__c.field-meta.xml
<CustomField>
    <fullName>owner_code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>owner code</label>
    <length>1</length>
    <type>Text</type>
</CustomField>