force-app/main/default/objects/BLS_Average_Wage__c/fields/size_code__c.field-meta.xml
<CustomField>
    <fullName>size_code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>size code</label>
    <length>1</length>
    <type>Text</type>
</CustomField>